# CollisionSimulator

./: .gitignore  CMakeLists.txt  README.md  run-simulation.sh  setup.txt
config/: a-100-100.siminput  a-100-200.siminput  a-200-200.siminput  a-200-400.siminput  a-300-300.siminput  a-300-600.siminput  a-50-100.siminput  a-50-50.siminput  a-500-1000.siminput  a-500-500.siminput  b-100-100.siminput  b-100-200.siminput  b-200-200.siminput  b-200-400.siminput  b-300-300.siminput  b-300-600.siminput  b-50-100.siminput  b-50-50.siminput  b-500-1000.siminput  b-500-500.siminput
include/: Controller.hh  DataGenerator.hh  Medium.hh  Packet.hh  ReceiverStation.hh  SenderStation.hh  Simulatable.hh  Station.hh
report/: report.md
src/: Controller.cc  DataGenerator.cc  Medium.cc  Packet.cc  ReceiverStation.cc  SenderStation.cc  Simulatable.cc  Station.cc  main.cc
test/: CMakeLists.txt  MediumTest.cc  MockMedium.hh  MockStation.hh  ReceiverStationTest.cc  SenderStationTest.cc  SimulatableTest.cc  StationTest.cc
